--- a/index.html
+++ b/index.html
@@ -143,17 +143,19 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Welcome to My Website
+                    Welcome 
                 </h1>
             </div>
+            <p> &nbsp </p>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-terminal fa-2x fa-fw"></i> Code</h4>
                     </div>
                     <div class="panel-body">
-                        <p>GitHub Code</p>
-                        <a href="https://github.com/kthohr" class="btn btn-default">Link</a>
+                        <p>Projects</p>
+                        <a href="bmr.html" target="_blank" class="btn btn-default">BMR</a>
+                        <a href="trame.html" target="_blank" class="btn btn-default">TraME</a>
                     </div>
                 </div>
             </div>
