--- a/bmr-replication-files.html
+++ b/bmr-replication-files.html
@@ -117,7 +117,7 @@
 
 <hr>
 
-<p><strong>VAR test files.</strong>
+<p><strong>VAR test files</strong>
 
 <ul>
  <li> BVARM: <a href="bmr/repl_files/bvar/BVARM.R" target="_blank">link</a>.</li>
@@ -129,7 +129,7 @@
 
 <hr>
 
-<p><strong>Uhlig's Method.</strong>
+<p><strong>Uhlig's Method</strong>
 
 <ul>
  <li> An-Schorfheide (2007). </li>
@@ -156,7 +156,7 @@
 
 <hr>
 
-<p><strong>gensys.</strong>
+<p><strong>gensys</strong>
 
 <ul>
  <li> An-Schorfheide (2007). </li>
@@ -182,7 +182,6 @@
 </ul>
 
 <hr>
-        <hr>
 
         <!-- Footer -->
         <footer>
