--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-terminal fa-2x fa-fw"></i> Code </h4>
+                        <h4><i class="fa fa-terminal fa-2x fa-fw"></i> Code <span style="float:right;"><a href="https://github.com/kthohr" target="_blank"><i class="fa fa-github-square fa-2x" style="color:black"></i></a></span></h4>
                     </div>
                     <div class="panel-body">
                         <p>Projects</p>
