--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
             </div>
             <div class="col-md-6">
                 <h2>About</h2>
-                <p>My name is Keith O'Hara. I am a PhD student in the Economics department at New York University.</p>
+                <p>My name is Keith O'Hara. I am a Ph.D. Candidate at the Department of Economics, New York University.</p>
                 <h3>Contact Details</h3>
                 <p><i class="fa fa-address-book-o"></i>
                     <abbr title="Mailing Address">M</abbr>:<br>
