--- a/trame.html
+++ b/trame.html
@@ -134,8 +134,8 @@
         </td>
         <td style="text-align: left; vertical-align: top; width: 50%;">
         <ul>
-            <li>The library includes several random utility model specifications;</li>
-            <li>as well as transferable, non-transferable, and imperfectly transferable utility</li>
+            <li>The library includes several random utility specifications,
+                as well as transferable, non-transferable, and imperfectly transferable utility</li>
             <li>MLE- and moment-matching-based estimation</li>
         </ul>
         </td>
