--- a/trame.html
+++ b/trame.html
@@ -122,7 +122,7 @@
         <td style="text-align: left; vertical-align: top; width: 50%;">
         <ul>
         <li>Flexible, templated library</li>
-        <li>Built on Armadillo</li>
+        <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a></li>
         <li>Can link with Gurobi or GLPK</li>
         </ul>
         </td>
