--- a/bmr.html
+++ b/bmr.html
@@ -213,8 +213,8 @@ install.packages("doParallel")</pre>
 <h3 style="text-align: left;" id="Doc"><strong style="font-size: 110%;">Documentation</strong></h3>
 
 <ul>
- <li>Accompanying vignette: <a href="http://bayes.squarespace.com/storage/bmr/BMR.pdf" target="_blank">link</a>.</li>
- <li> PDF of BMR help files: <a href="http://bayes.squarespace.com/storage/bmr/BMR-manual.pdf" target="_blank">link</a>. The help files can also be accessed in the R environment using '?chosen_function'; for example, ?BVARM.</li>
+ <li>Accompanying vignette: <a href="bmr/BMR.pdf" target="_blank">link</a>.</li>
+ <li> PDF of BMR help files: <a href="bmr/BMR-manual.pdf" target="_blank">link</a>. The help files can also be accessed in the R environment using '?chosen_function'; for example, ?BVARM.</li>
 </ul>
 
 <p> The vignette (linked above) is intended to be a comprehensive guide to the routines (and what goes on under the hood, so to speak) and should be consulted first before submitting any questions to me about the package. I am more than happy to receive bug reports (and comments in general) about BMR, use the contact tab above to do so, but I am not willing to provide technical support for the package. (Technical support in the sense of 'how do I get my model into the required format', or 'what prior should I use'.)</p>
