--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -29,12 +29,6 @@
 
 </head>
 
-<style>
-pre {
-    display: inline-block;
-}
-</style>
-
 <body>
 
     <!-- Navigation -->
@@ -106,74 +100,104 @@ pre {
         <div class="row">
             <div class="col-lg-12">
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li class="active">TraME</li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="r-code.html">R</a></li>
+                    <li class="active">R-devel</li>
                 </ol>
             </div>
         </div>
         <!-- /.row -->
 
 
-<h3 style="text-align: center;"><strong style="font-size: 130%;"><u>Transportation Methods for Econometrics</u></strong></h3>
-<p> </p>
+<h3 style="text-align: center;"><strong style="font-size: 130%;">Building R from Source in OSX 10.12.3</strong></h3>
+</br>
 
-<p>TraME (<b><i>Tra</i></b>nsportation <b><i>M</i></b>ethods for <b><i>E</i></b>conometrics) is a C++ library for solving problems of equilibrium computation and estimation in consumer demand and matching frameworks via the Mass Transportation Approach.</p>
+<p>This page will guide you through the process of compiling the R-devel on a Mac computer (OSX v10.10.4).</p>
 
-<b>Features</b>
-<br>
-<table border="0" cellpadding="0" cellspacing="0">
-    <tbody>
-    <tr>
-        <td style="text-align: left; vertical-align: top; width: 50%;">
-        <ul>
-        <li>Flexible, templated library</li>
-        <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a></li>
-        <li>Can link with Gurobi or GLPK</li>
-        </ul>
-        </td>
-        <td>
-        &nbsp;
-        </td>
-        <td class="line" style="vertical-align: top;">
-        <br>
-        </td>
-        <td style="text-align: left; vertical-align: top; width: 50%;">
-        <ul>
-            <li>The library includes several random utility specifications,
-                as well as transferable, non-transferable, and imperfectly transferable utility</li>
-            <li>MLE- and moment-matching-based estimation</li>
-        </ul>
-        </td>
-    </tr>
-    </tbody>
-</table>
+<hr>
 
-<br>
+<strong style="font-size: 120%;">Preliminaries</strong>
 
-<p><strong>License</strong>: TraME is licensed under the GNU General Public License (GPL) version 2, or (at your option) any later version. The experimental nature of this software means that it is intended for academic use only.</p>
+<p>First we need to install some tools.</p>
 
-<p><strong>Authors</strong>:</p>
 <ul>
-    <li>TraME Team: <a href="http://alfredgalichon.com/" target="_blank">Alfred Galichon</a> (R), Keith O'Hara (C++), and <a href="https://sites.google.com/site/webersimonsite/home" target="_blank">Simon Weber</a> (R)</li>
+    <li> Get Xcode from the App Store. (The page should look something like <a href="https://itunes.apple.com/us/app/xcode/id497799835?mt=12" target="_blank">this</a>.) New versions of Xcode should come with  the <b>command line tools</b> pre-installed.</li>
+    <ul>
+        <li>Open a terminal window&#8212;search for 'terminal' if you've never needed terminal/bash before&#8212;and type:
+        <pre>
+clang++ -v</pre>
+        you should then see something like 
+        <pre>
+Apple LLVM version 8.0.0 (clang-800.0.42.1)
+Target: x86_64-apple-darwin16.4.0
+Thread model: posix</pre>
+        </li>
+    </ul>
+    <li>Unfortunately, Xcode does not come with a Fortran compiler, which we will need. The simplest way to obtain an R-compatible version of <b>gfortran</b> is to open a terminal window and type:
+    <pre>
+cd ~/Desktop
+curl -O http://r.research.att.com/libs/gfortran-4.8.2-darwin13.tar.bz2
+sudo tar fvxz gfortran-4.8.2-darwin13.tar.bz2 -C /</pre>
+    </li>
+    The 'sudo' command above will request that you enter your password; this is because we are placing files in what are usually restricted folders (/usr/).
 </ul>
 
 <hr>
 
-<h3 style="text-align: left;"><strong style="font-size: 130%;">Download</strong> <a href="https://travis-ci.org/TraME-Project/TraME" target="_blank"><img src="https://travis-ci.org/TraME-Project/TraME.svg?branch=master" alt="BMR Build"></a></h3>
+<strong style="font-size: 120%;">Download and Unpack</strong>
 
-<p>Current version: 2017-03-15.</p>
-<ul>
-    <li>The source code is available on <a href="https://github.com/TraME-Project/TraME" target="_blank">GitHub</a>.</li>
-    <li>To use the linear programming features, TraME requires an installation of Gurobi or GLPK.</li>
-    <li>GLPK performs significantly worse than Gurobi.</li>
-</ul>
+<p>First, create an R folder on your Desktop.</p>
 
-<p>TraME can be installed in the standard way.</p>
 <pre>
-./configure
-make
-make install</pre>
+cd ~/Desktop
+mkdir R</pre>
+
+<p>Then download and unpack the latest development version of R:</p>
+<pre>
+cd ~/Desktop/R
+curl -O ftp://ftp.stat.math.ethz.ch/Software/R/R-devel.tar.gz
+tar -zxvf R-devel.tar.gz</pre>
+
+<p>We then need to modify the config.site file in the R-devel directory.</p>
+
+<pre class="brush: js; toolbar: false">
+#! /bin/sh
+
+CC=clang
+CXX=clang++
+F77=gfortran-4.8
+FC=$F77
+OBJC=clang
+CFLAGS="-Wall -mtune=core2 -g -O2"
+CXXFLAGS="-Wall -mtune=core2 -g -O2"
+OBJCFLAGS="-Wall -mtune=core2 -g -O2"
+F77FLAGS="-Wall -g -O2"
+FCFLAGS=$F77FLAGS
+
+PKG_CONFIG_PATH=/opt/X11/lib/pkgconfig:/usr/local/lib/pkgconfig:/usr/lib/pkgconfig
+
+JAVA_HOME="$(/usr/libexec/java_home)"
+JAVA_CPPFLAGS="-I/${JAVA_HOME}/include -I/${JAVA_HOME}/include/darwin"
+JAVA_LD_LIBRARY_PATH="${JAVA_HOME}/jre/lib/server"
+JAVA_LIBS="-L/${JAVA_HOME}/jre/lib/server -ljvm"</pre>
+
+<pre class="brush: js; toolbar: false">
+./configure --prefix=/Builds/R-devel --without-x --without-internal-tzcode \
+	--with-blas="-framework Accelerate" --with-lapack \
+		--enable-R-shlib --enable-memory-profiling
+</pre>
+
+<pre class="brush: js; toolbar: false">
+./configure --prefix=/Builds/R-devel --without-x --without-internal-tzcode \
+	--with-blas="-lopenblas" --with-lapack \
+		--enable-R-shlib --enable-memory-profiling
+</pre>
+
+
+
+<hr>
+
+<strong style="font-size: 120%;">Configure</strong>
 
     <hr>
 
