Remove index.html references

--- a/bmr.html
+++ b/bmr.html
@@ -63,7 +63,7 @@ pre {
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Keith O'Hara</a>
+                <a class="navbar-brand" href="http://www.kthohr.com">Keith O'Hara</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -121,7 +121,7 @@ pre {
         <div class="row">
             <div class="col-lg-12">
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="http://www.kthohr.com">Home</a>
                     </li>
                     <li class="active">BMR</li>
                     <li><a href="bmr-replication-files.html">Replication Files</a></li>
