--- a/404.html
+++ b/404.html
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Keith O'Hara</a>
+                <a class="navbar-brand" href="http://www.kthohr.com">Keith O'Hara</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -103,7 +103,7 @@
                     <small>Page Not Found</small>
                 </h1>
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="http://www.kthohr.com">Home</a>
                     </li>
                     <li class="active">404</li>
                 </ol>
