--- a/bmr-replication-files.html
+++ b/bmr-replication-files.html
@@ -53,7 +53,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Keith O'Hara</a>
+                <a class="navbar-brand" href="http://www.kthohr.com">Keith O'Hara</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -111,7 +111,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="http://www.kthohr.com">Home</a>
                     </li>
                     <li><a href="bmr.html">BMR</a></li>
                     <li class="active">Replication Files</li>
