--- a/bmr.html
+++ b/bmr.html
@@ -80,6 +80,7 @@ pre {
                             <li>
                                 <a href="trame.html">TraME</a>
                             </li>
+                            <li class="divider"></li>
                             <li>
                                 <a href="other_code.html">Other</a>
                             </li>
