--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -59,6 +59,7 @@
                             <li>
                                 <a href="trame.html">TraME</a>
                             </li>
+                            <li class="divider"></li>
                             <li>
                                 <a href="other_code.html">Other</a>
                             </li>
