--- a/trame.html
+++ b/trame.html
@@ -76,6 +76,7 @@ pre {
                             <li>
                                 <a href="trame.html">TraME</a>
                             </li>
+                            <li class="divider"></li>
                             <li>
                                 <a href="other_code.html">Other</a>
                             </li>
