--- a/trame.html
+++ b/trame.html
@@ -78,6 +78,10 @@ pre {
                             </li>
                             <li class="divider"></li>
                             <li>
+                                <a href="r-mac-source.html">Build R-devel</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li>
                                 <a href="other_code.html">Other</a>
                             </li>
                         </ul>
