--- a/404.html
+++ b/404.html
@@ -61,6 +61,10 @@
                             </li>
                             <li class="divider"></li>
                             <li>
+                                <a href="r-mac-source.html">Build R-devel</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li>
                                 <a href="other_code.html">Other</a>
                             </li>
                         </ul>
