--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <meta name="description" content="Personal Website of Keith O'Hara">
     <meta name="author" content="Keith O'Hara">
 
@@ -77,7 +77,7 @@
                             </li>
                             <li class="divider"></li>
                             <li>
-                                <a href="r-mac-source.html">Build R-devel</a>
+                                <a href="r-mac-source.html">Building R-devel</a>
                             </li>
                             <li class="divider"></li>
                             <li>
