--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -76,7 +76,7 @@ pre {
                             </li>
                             <li class="divider"></li>
                             <li>
-                                <a href="r-mac-source.html">Build R-devel</a>
+                                <a href="r-mac-source.html">Building R-devel</a>
                             </li>
                             <li class="divider"></li>
                             <li>
