--- a/404.html
+++ b/404.html
@@ -66,7 +66,7 @@
                             </li>
                             <li class="divider"></li>
                             <li>
-                                <a href="r-mac-source.html">Build R-devel</a>
+                                <a href="r-mac-source.html">Building R-devel</a>
                             </li>
                             <li class="divider"></li>
                             <li>
