--- a/bmr-replication-files.html
+++ b/bmr-replication-files.html
@@ -163,7 +163,7 @@
  </ul>
  <li> Lubik-Schorfheide (2007) with intercept terms in the measurement equation. </li>
  <ul>
-  <li>Solve: <a href="bmr/repl_files/dsge/LubikSchorfheideCons.R target="_blank"">link</a>. Estimate: <a href="bmr/repl_files/dsge/LubikSchorfheideConsEst.R" target="_blank">link</a>.</li>
+  <li>Solve: <a href="bmr/repl_files/dsge/LubikSchorfheideCons.R" target="_blank">link</a>. Estimate: <a href="bmr/repl_files/dsge/LubikSchorfheideConsEst.R" target="_blank">link</a>.</li>
  </ul>
  <li> basic New-Keynesian Model. </li>
  <ul>
