--- a/bmr.html
+++ b/bmr.html
@@ -47,6 +47,8 @@ h3:target { padding-top: 60px; margin-top: -60px;}
 
     </script>
 
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+
 </head>
 
 <style>
@@ -157,6 +159,12 @@ pre {
 </div>
 </div>
 
+<p><a href="https://travis-ci.org/kthohr/BMR" target="_blank"><img src="https://travis-ci.org/kthohr/BMR.svg?branch=master" alt="BMR Build"></a>
+<a href="https://ci.appveyor.com/project/kthohr/BMR/branch/master" target="_blank"><img src="https://ci.appveyor.com/api/projects/status/github/kthohr/BMR" alt="BMR Build"></a></p>
+<p><a class="github-button" href="https://github.com/kthohr/bmr/subscription" data-icon="octicon-eye" data-count-href="/kthohr/bmr/watchers" data-count-api="/repos/kthohr/bmr#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch kthohr/bmr on GitHub">Watch</a>
+<a class="github-button" href="https://github.com/kthohr/bmr" data-icon="octicon-star" data-count-href="/kthohr/bmr/stargazers" data-count-api="/repos/kthohr/bmr#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star kthohr/bmr on GitHub">Star</a>
+<a class="github-button" href="https://github.com/kthohr/bmr/fork" data-icon="octicon-repo-forked" data-count-href="/kthohr/bmr/network" data-count-api="/repos/kthohr/bmr#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork kthohr/bmr on GitHub">Fork</a></p>
+
 <p>BMR (Bayesian Macroeconometrics in R) is a collection of R and C++ routines for estimating Bayesian Vector Autoregressive (BVAR) and Dynamic Stochastic General Equilibrium (DSGE) models in the R statistical environment.</p>
 
 <b>Features</b>
@@ -212,7 +220,9 @@ install.packages("doParallel")</pre>
 
 <hr>
 
-<h3 style="text-align: left;" id="DL"><strong style="font-size: 130%;">Download</strong> <a href="https://travis-ci.org/kthohr/BMR" target="_blank"><img src="https://travis-ci.org/kthohr/BMR.svg?branch=master" alt="BMR Build"></a> <a href="https://ci.appveyor.com/project/kthohr/BMR/branch/master" target="_blank"><img src="https://ci.appveyor.com/api/projects/status/github/kthohr/BMR" alt="BMR Build"></a></h3>
+<h3 style="text-align: left;" id="DL"><strong style="font-size: 130%;">Download</strong></h3>
+
+<p><a class="github-button" href="https://github.com/kthohr/bmr/archive/master.zip" data-icon="octicon-cloud-download" aria-label="Download kthohr/bmr on GitHub">Download</a></p>
 
 <p>Current version: 0.5.4, 2016-06-18.</p>
 <ul>
