--- a/about.html
+++ b/about.html
@@ -43,6 +43,8 @@
 
     </script>
 
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+
 </head>
 
 <body>
@@ -133,10 +135,10 @@
 
         <!-- Intro Content -->
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <img class="img-responsive" src="pics/wsp_2.jpg" alt="">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-8">
                 <h2>About</h2>
                 <p>My name is Keith O'Hara. I am a Ph.D. Candidate at the Department of Economics, New York University.</p>
                 <h3>Contact Details</h3>
@@ -150,6 +152,7 @@
                 <ul class="list-unstyled list-inline list-social-icons">
                     <li>
                         <a href="https://github.com/kthohr" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
+<a class="github-button" href="https://github.com/kthohr" data-count-href="/kthohr/followers" data-count-api="/users/kthohr#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @kthohr on GitHub">Follow @kthohr</a>
                     </li>
                 </ul>
             </div>
