--- a/trame.html
+++ b/trame.html
@@ -163,7 +163,7 @@ pre {
         <ul>
             <li>Several popular random utility specifications,
                 as well as models with transferable, non-transferable, and imperfectly transferable utility</li>
-            <li>Numerous equilibrium solvers, including iterated fixed-point and deferred acceptance algorithms
+            <li>Numerous equilibrium solvers, including the iterative proportional fitting procedure (IPFP) and the deferred acceptance algorithm
             <li>Maximum likelihood- and moment matching-based estimation</li>
         </ul>
         </td>
