--- a/bmr.html
+++ b/bmr.html
@@ -11,7 +11,7 @@ h3:target { padding-top: 60px; margin-top: -60px;}
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <meta name="description" content="Personal Website of Keith O'Hara">
+    <meta name="description" content="Bayesian Macroeconometrics in R (BMR)">
     <meta name="author" content="Keith O'Hara">
 
     <meta name="keywords" content="Bayesian, Macroeconometrics, BMR, Economics, PhD student, NYU, New York University, Econometrics, R, C++, Cpp, Research" />
