--- a/trame.html
+++ b/trame.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <meta name="description" content="Personal Website of Keith O'Hara">
+    <meta name="description" content="Transportation Methods for Econometrics">
     <meta name="author" content="Keith O'Hara">
 
     <meta name="keywords" content="Economics, PhD student, NYU, New York University, Econometrics, R, C++, Cpp, Research" />
