--- a/bmr-replication-files.html
+++ b/bmr-replication-files.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <meta name="description" content="Personal Website of Keith O'Hara">
+    <meta name="description" content="Bayesian Macroeconometrics in R (BMR) - Replication files">
     <meta name="author" content="Keith O'Hara">
 
     <meta name="keywords" content="Bayesian, Macroeconometrics, BMR, Economics, PhD student, NYU, New York University, Econometrics, R, C++, Cpp, Research" />
